LB-197 add usage of variables

--- a/styles/scss/vertical-tabs.scss
+++ b/styles/scss/vertical-tabs.scss
@@ -48,15 +48,15 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  height: 48px;
-  padding: 0 0 0 12px;
+  height: $spacing-xxl;
+  padding: 0 0 0 $spacing-sm;
 
   > span {
     flex: 1;
   }
 
   .is-collapsed & {
-    padding: 0 12px;
+    padding: 0 $spacing-sm;
     justify-content: center;
     > span {
       display: none;
@@ -88,13 +88,13 @@
 
 .h5p-vtab-a {
   background-color: $subtle;
-  height: 48px;
+  height: $spacing-xxl;
   font-size: 14px;
   font-weight: 600;
-  line-height: 48px;
+  line-height: $spacing-xxl;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding: 0 48px 0 12px;
+  padding: 0 $spacing-xxl 0 $spacing-sm;
   margin: 0;
   cursor: pointer;
   overflow: hidden;
@@ -104,7 +104,7 @@
 
   .is-collapsed & {
     text-align: center;
-    padding: 0 12px;
+    padding: 0 $spacing-sm;
     > *:not(.h5p-index-label) {
       display: none;
     }
@@ -231,7 +231,7 @@
   > .remove {
     cursor: pointer;
     width: 1.25em;
-    height: 48px;
+    height: $spacing-xxl;
     font-size: 1.75em;
     text-align: center;
 
@@ -240,7 +240,7 @@
       content: "\e912";
       color: #6f6f71;
       display: inline-block;
-      line-height: 48px;
+      line-height: $spacing-xxl;
       font-size: 0.6em;
     }
   }
@@ -285,7 +285,7 @@
   }
 
   .is-collapsed & {
-    width: 48px;
+    width: $spacing-xxl;
     &:before {
       margin-right: 0;
     }
