LB-197 update styling

--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -5,6 +5,7 @@ $form-border-color: #d0d0d1;
 $primary: #1F67A8;
 $primary-dark: #174D7D;
 $subtle: #F5F5F5;
+$muted: #EAEAEA;
 $border-radius-small: 2px;
 $spacing-xxs: 0.25rem; //4px;
 $spacing-xs: 0.5rem; //8px;
