--- a/styles/scss/vertical-tabs.scss
+++ b/styles/scss/vertical-tabs.scss
@@ -69,6 +69,7 @@
   & {
     height: 100%;
     line-height: 1;
+    transform: rotate(180deg);
   }
 
   &:before {
@@ -77,7 +78,7 @@
   }
 
   .is-collapsed & {
-    transform: rotate(180deg);
+    transform: rotate(0);
   }
 }
 
